2013-07-11  Paul Eggert  <eggert@cs.ucla.edu>

	* eval.c (backtrace_function, backtrace_args): Now EXTERNALLY_VISIBLE.
	This is for .gdbinit xbacktrace.

	* sysdep.c, term.c, termcap.c, terminal.c: Integer-related minor fixes.
	* sysdep.c (emacs_get_tty): Return void, since nobody uses the value.
	(emacs_set_tty): Now static.
	* sysdep.c (emacs_set_tty, tabs_safe_p, emacs_close):
	* term.c (tty_capable_p, tty_default_color_capabilities)
	(get_tty_terminal, term_mouse_movement)
	(handle_one_term_event, init_tty, maybe_fatal):
	* termcap.c (tgetst1, struct termcap_buffer, valid_filename_p)
	(tgetent, scan_file, name_match, compare_contin):
	* terminal.c (get_terminal):
	Use bool for boolean.
	* sysdep.c (init_system_name): Don't overflow stack on huge hostname.
	Prefer char to unsigned char if either will do.
	* term.c (OUTPUT, turn_on_face): Omit unnecessary casts to int.
	(tty_write_glyphs): Prefer int to unsigned.
	(produce_glyphless_glyph): Remove 2nd (unused) int arg.
	All callers changed.
	* termcap.c (tprint, main) [TEST]: Remove non-working test.

2013-07-10  Paul Eggert  <eggert@cs.ucla.edu>

	Port to C89.
	* bytecode.c (BYTE_CODE_THREADED): Do not define if __STRICT_ANSI__.
	(B__dummy__): New dummy symbol, to pacify C89.
	* dbusbind.c (XD_DEBUG_MESSAGE): Omit debugging on C89 hosts, since
	they can't grok varargs macros.
	* dispnew.c (add_window_display_history)
	(add_frame_display_history):
	* print.c (print_object):
	* xdisp.c (debug_method_add):
	Use %p printf format only for void pointers.
	* emacs.c (usage_message): New constant, replacing ...
	(USAGE1, USAGE2, USAGE3): Remove; they were too long for C89.
	(main): Adjust to usage reorg.
	* fns.c (syms_of_fns):
	* profiler.c (syms_of_profiler):
	Don't use non-constant struct initializers.
	* gnutls.h (gnutls_initstage_t):
	* lisp.h (enum Lisp_Fwd_Type):
	* lread.c (lisp_file_lexically_bound_p):
	* xsettings.c (anonymous enum):
	Remove trailing comma.